--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml  # 如果需要自定义SQL文件
-  type-aliases-package: com.coriger.entity
+  type-aliases-package: com.coriger.model.entity
   global-config:
     db-config:
       id-type: auto
